# firewatcher

./: .dockerignore  .env.example  .gitignore  .manifest.json  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  compose.yaml  docker-compose.yaml  pyproject.toml  release.json  requirements.txt
.github/workflows/: build.yaml  conventional.yaml  deploy.yaml  deploy.yml  lint.yaml  release.yaml  test.yaml
app/: api.py  bot.py  constants.py
app/cogs/: commands.py  events.py  tasks.py
app/views/: fires.py
src/: api.py  bot.py  constants.py
src/cogs/: commands.py  events.py  tasks.py
src/views/: fires.py
