[project]

name = "bot"
version = "2.1.5"
requires-python = ">= 3.11"
dependencies = [
    "discord.py==2.5.2",
    "requests==2.32.3",
    "PyNaCl==1.5.0",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]

check = ["ruff==0.6.9", "pre-commit==4.0.1"]
test = ["pytest==8.3.3"]

[tool.ruff]
line-length = 80
indent-width = 4

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["test"]
